# CppSolyanka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  coverage.info  start_client.sh  start_server.sh  test.sh
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/client/: client.cpp.func-sort-c.html  client.cpp.func.html  client.cpp.gcov.html  client.hpp.func-sort-c.html  client.hpp.func.html  client.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/objects/: commands.hpp.func-sort-c.html  commands.hpp.func.html  commands.hpp.gcov.html  finance.hpp.func-sort-c.html  finance.hpp.func.html  finance.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  msg_objects.hpp.func-sort-c.html  msg_objects.hpp.func.html  msg_objects.hpp.gcov.html  user.hpp.func-sort-c.html  user.hpp.func.html  user.hpp.gcov.html
coverage_report/server/: app.cpp.func-sort-c.html  app.cpp.func.html  app.cpp.gcov.html  app.hpp.func-sort-c.html  app.hpp.func.html  app.hpp.gcov.html  connect.cpp.func-sort-c.html  connect.cpp.func.html  connect.cpp.gcov.html  connect.hpp.func-sort-c.html  connect.hpp.func.html  connect.hpp.gcov.html  hub.cpp.func-sort-c.html  hub.cpp.func.html  hub.cpp.gcov.html  hub.hpp.func-sort-c.html  hub.hpp.func.html  hub.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  server.cpp.func-sort-c.html  server.cpp.func.html  server.cpp.gcov.html  utils.hpp.func-sort-c.html  utils.hpp.func.html  utils.hpp.gcov.html
coverage_report/server/database/: database.cpp.func-sort-c.html  database.cpp.func.html  database.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/server/state/: index-sort-f.html  index-sort-l.html  index.html  state.cpp.func-sort-c.html  state.cpp.func.html  state.cpp.gcov.html
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  clietn.cpp  main.cpp  user.hpp
src/client/commands/: CMakeLists.txt  commands.cpp  commands.hpp
src/client/json/: command.hpp  user.hpp
src/json/: hello_world.json
src/logger/: logger.cpp  logger.hpp
src/objects/: CMakeLists.txt  binder.cpp  binder.hpp  card.hpp  commands.hpp  error.hpp  finance.cpp  finance.hpp  mempool.cpp  mempool.hpp  message.hpp  msg_objects.cpp  msg_objects.hpp  objects.cpp  reply.hpp  success_result.hpp  transaction.hpp  tx.cpp  tx.hpp  user.hpp
src/server/: CMakeLists.txt  app.cpp  app.hpp  connect.cpp  connect.hpp  hub.cpp  hub.hpp  main.cpp  server.cpp  server.hpp  utils.hpp
src/server/client/: client.cpp  client.hpp
src/server/data_base/: data_base.hpp
src/server/database/: CMakeLists.txt  database.cpp  database.hpp
src/server/json/: user.hpp
src/server/requests/: CMakeLists.txt  request_methods.cpp  request_methods.hpp
src/server/state/: CMakeLists.txt  logins.json  state.cpp  state.hpp
src/test/: CMakeLists.txt  main.cpp  mock.cpp  mock.hpp  mock_app.hpp  mock_clietn.hpp  mock_hub.hpp  utils.hpp
src/tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.hpp
src/ui/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/ui/api/: api.cpp  api.hpp
src/ui/authorization/: auth.cpp  auth.hpp
src/utlis/: utlis.hpp
